Changelog 0.3.69 [20230507]:
- Handle season and episode as integers

Changelog 0.3.68 [20230427]:
- Handled Consumet error
- Added New Context menu "mark as completed"

Changelog 0.3.67 [20230420]:
- Fix regression error from last commit disabling subs on zoro streams

Changelog 0.3.66 [20230418]:
- Fixed Subtitle Bugs

Changelog 0.3.65 [20230414]:
- Handle animix dub stream site being down

Changelog 0.3.64 [20230412]:
- Added New Setting "Set Streaming Site"

Changelog 0.3.63 [20230410]:
- Consumet: Remove cached request before retrying

Changelog 0.3.62 [20230407]:
- Improved Priority Settings
- Allow MultiSelect Priority Settings

Changelog 0.3.61 [20230407]:
- Fixed Ratelimiting
- Fixed Zoro
- Improved Gogohd
- Update gogo url 
- Added quality for 9anime embeds
- Updated gogoembed extractor

Changelog 0.3.60 [20230405]:
- Improved 2 Priority Settings

Changelog 0.3.59 [20230403]:
- Added New Setting "Prioritize By Season"
- Added New Setting "Prioritize By Part"
- Added Enime fallback

Changelog 0.3.58 [20230402]:
- Added New Setting "Set Items Per Page"

Changelog 0.3.57 [20230318]:
- Added New Setting "Prioritize Dual-Audio Sources"
- Added New Setting "Prioritize Multisubs Sources"
- Added New Setting "Prioritize Batch Sources"

Changelog 0.3.56 [20230318]:
- Fixed Small Bug with Skip Intro Duration
- Moved two settings

Changelog 0.3.55 [20230317]:
- Small Fixes with Playback

Changelog 0.3.54 [20230316]:
- Added New Setting "Enable Automatic Outro Skip"
- Added New Setting "Enable Automatic Intro Skip"
- Recoded Skip Intro

Changelog 0.3.53 [20230316]:
- Fixed playlist not building if airdate not available
- Added New Setting "Preferred Playlist Size"

Changelog 0.3.52 [20230315]:
- Fixed a small bug with Playing Next Dialog

Changelog 0.3.51 [20230314]:
- Fixed a major bug with the Playing Next Dialog

Changelog 0.3.50 [20230313]:
- Added New Setting "Dialog Theme"
- Added 2 New Themes for Skip Intro, Playing Next Dialog

Changelog 0.3.49 [20230310]: