@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.69">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.70">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,8 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.69 [20230507]:
-- Handle season and episode as integers
+Changelog 0.3.70 [20230508]:
+- Added playtaku embed extractor
     </news>
   </extension>
 </addon>
