@@ -1,3 +1,6 @@
+Changelog 0.3.70 [20230508]:
+- Added playtaku embed extractor
+
 Changelog 0.3.69 [20230507]:
 - Handle season and episode as integers
 
